Fix some issue on Safari

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 main {
-  flex: 98%;
+  flex: 97%;
   display: flex;
   flex-direction: column;
 }
@@ -14,13 +14,17 @@ main {
 footer {
   display: flex;
   justify-content: space-between;
-  flex: 2%;
+  flex: 3%;
   background: #2d2d2d;
 }
 
 footer >p {
   margin: 5px;
   font-size: 12px;
+  color: #dedede;
+}
+
+.footer-link {
   color: #dedede;
 }
 
